--- a/css/mobileVersion.css
+++ b/css/mobileVersion.css
@@ -1,11 +1,11 @@
 @media (max-width: 1200px) {
-    .panel{
+    .panelTablero{
         gap: 4px;
         width: calc(var(--miwidth) * 0.9);
         height: calc(var(--miheight) * 0.9);
     }
 
-    .panel::before{
+    .panelTablero::before{
         content: 'BCDEFGHI';
         position: absolute;
         font-size: calc(4em * 0.9);
@@ -15,7 +15,7 @@
         font-family: numeros;
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(680px * 0.9);
         left: calc(-160px * 0.9);
         width: calc(1200px * 0.9);
@@ -31,13 +31,13 @@
 
 
 @media (max-width: 1100px) {
-    .panel{
+    .panelTablero{
         gap: 4px;
         width: calc(var(--miwidth) * 0.8);
         height: calc(var(--miheight) * 0.8);
     }
 
-    .panel::before{
+    .panelTablero::before{
         content: 'BCDEFGHI';
         position: absolute;
         font-size: calc(4em * 0.8);
@@ -47,7 +47,7 @@
         font-family: numeros;
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(680px * 0.8);
         left: calc(-160px * 0.8);
         width: calc(1200px * 0.8);
@@ -62,20 +62,20 @@
 }
 
 @media (max-width: 1000px) {
-    .panel{
+    .panelTablero{
         gap: 3px;
         width: calc(var(--miwidth) * 0.7);
         height: calc(var(--miheight) * 0.7);
     }
 
-    .panel::before{
+    .panelTablero::before{
         font-size: calc(4em * 0.7);
         top: calc(-90px * 0.7);
         left: calc(35px * 0.7);
         letter-spacing: calc(36px * 0.7);
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(700px * 0.7);
         left: calc(-160px * 0.7);
         width: calc(1200px * 0.7);
@@ -91,20 +91,20 @@
 
 
 @media (max-width: 800px) {
-    .panel{
+    .panelTablero{
         gap: 2px;
         width: calc(var(--miwidth) * 0.6);
         height: calc(var(--miheight) * 0.6);
     }
 
-    .panel::before{
+    .panelTablero::before{
         font-size: calc(4em * 0.6);
         top: calc(-90px * 0.6);
         left: calc(35px * 0.6);
         letter-spacing: calc(36px * 0.6);
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(700px * 0.6);
         left: calc(-160px * 0.6);
         width: calc(1200px * 0.6);
@@ -119,21 +119,21 @@
 }
 
 @media (max-width: 700px) {
-    .panel{
+    .panelTablero{
         gap: 1px;
         width: calc(var(--miwidth) * 0.5);
         height: calc(var(--miheight) * 0.5);
         padding: 10px;
     }
 
-    .panel::before{
+    .panelTablero::before{
         font-size: calc(4em * 0.5);
         top: calc(-90px * 0.5);
         left: calc(35px * 0.5);
         letter-spacing: calc(34px * 0.5);
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(680px * 0.5);
         left: calc(-160px * 0.5);
         width: calc(1200px * 0.5);
@@ -148,20 +148,20 @@
 }
 
 @media (max-width: 600px) {
-    .panel{
+    .panelTablero{
         gap: 0;
         width: calc(var(--miwidth) * 0.4);
         height: calc(var(--miheight) * 0.4);
     }
 
-    .panel::before{
+    .panelTablero::before{
         font-size: calc(4em * 0.4);
         top: calc(-90px * 0.4);
         left: calc(35px * 0.4);
         letter-spacing: calc(35px * 0.4);
     }
 
-    .panel::after{
+    .panelTablero::after{
         top: calc(700px * 0.4);
         left: calc(-160px * 0.4);
         width: calc(1200px * 0.4);
